--- a/main/package.json
+++ b/main/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/runtime": "^7.27.6",
     "antd": "^5.27.1",
+    "moment": "^2.30.1",
     "umi": "^4.4.11"
   },
   "devDependencies": {
