--- a/main/package.json
+++ b/main/package.json
@@ -10,8 +10,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.27.6",
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "antd": "^5.27.1",
     "dayjs": "^1.11.18",
+    "fullcalendar": "^6.1.19",
     "moment": "^2.30.1",
     "umi": "^4.4.11"
   },
