--- a/main/package.json
+++ b/main/package.json
@@ -17,13 +17,17 @@
     "@fullcalendar/timegrid": "^6.1.19",
     "antd": "^5.27.1",
     "dayjs": "^1.11.18",
+    "echarts": "^6.0.0",
     "fullcalendar": "^6.1.19",
     "moment": "^2.30.1",
+    "react-countup": "^6.5.3",
+    "react-grid-layout": "^1.5.2",
     "umi": "^4.4.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "@types/react-grid-layout": "^1.3.5",
     "rimraf": "^6.0.1",
     "typescript": "^5.0.3"
   }
