--- a/app/package.json
+++ b/app/package.json
@@ -1,12 +1,39 @@
 {
-  "name": "to-do-workbench",
+  "name": "todo_workbench",
   "version": "1.0.0",
+  "description": "待办工作台",
+  "author": "ciciya-",
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@electron-forge/cli": "^7.9.0",
+    "@electron-forge/maker-deb": "^7.9.0",
+    "@electron-forge/maker-rpm": "^7.9.0",
+    "@electron-forge/maker-squirrel": "^7.9.0",
+    "@electron-forge/maker-zip": "^7.9.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.9.0",
+    "@electron-forge/plugin-fuses": "^7.9.0",
+    "@electron/fuses": "^1.8.0",
     "electron": "^37.2.0"
   },
   "scripts": {
-    "start": "electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.1",
+    "node-fetch": "^2.7.0"
+  },
+  "build": {
+    "extraResources": [
+      {
+        "from": "server/db",
+        "to": "db",
+        "filter": [
+          "**/*"
+        ]
+      }
+    ]
   }
 }
