--- a/app/package.json
+++ b/app/package.json
@@ -30,9 +30,7 @@
       {
         "from": "server/db",
         "to": "db",
-        "filter": [
-          "**/*"
-        ]
+        "filter": ["**/*"]
       }
     ]
   }
